--- a/frontend/src/styles/LandingPage.css
+++ b/frontend/src/styles/LandingPage.css
@@ -3,7 +3,7 @@
 :root {
   --primary-color: #d4a373; /* Gold */
   --secondary-color: #001f3f; /* Deep Navy */
-  --accent-color: #b55850; /* Bronze */
+  --accent-color: #c44136; /* Bronze */
   --text-dark: #4e342e;
   --text-light: #ffffff;
   --background-light: #f5f5f5;
@@ -128,9 +128,12 @@ a {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(255, 255, 255, 0.1); /* Optional tint or fully transparent */
+  backdrop-filter: blur(10px); /* Adjust the blur intensity */
+  -webkit-backdrop-filter: blur(10px); /* For Safari compatibility */
   z-index: 1;
 }
+
 
 .hero-overlay {
   text-align: center;
@@ -142,10 +145,10 @@ a {
 
 .hero-title {
   font-family: var(--font-heading);
-  font-size: 48px;
+  font-size: 98px;
   margin: 0;
   font-weight: 700;
-  text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.7);
+  text-shadow: 8px 10px 10px rgba(0, 0, 0, 0.7);
   color: var(--primary-color);
 }
 
@@ -153,7 +156,7 @@ a {
   font-size: 24px;
   margin: 20px 0 30px 0;
   font-weight: 600;
-  color: var(--primary-color);
+  color: var(--accent-color);
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
@@ -178,6 +181,9 @@ a {
 .why-choose-us {
   background-color: var(--text-light);
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .why-choose-us-container {
@@ -187,6 +193,9 @@ a {
   align-items: center;
   gap: 0;
   flex-wrap: wrap;
+  align-items: contain;
+  max-height: 100vh;
+
 }
 
 .why-choose-us img {
@@ -194,6 +203,7 @@ a {
   max-width: 50%;
   width: 100%;
   transition: filter 0.3s ease;
+  max-height: 90vh;
 }
 
 .why-choose-us-content {
@@ -204,18 +214,22 @@ a {
 }
 
 .why-choose-us-content h2 {
-  font-size: 32px;
+  font-size: 50px;
   color: var(--primary-color);
   margin-bottom: 20px;
+  text-shadow: 1px 1px 6px rgba(0, 0, 0, 0.7);
 }
 
 .why-choose-us-content p {
-  font-size: 18px;
+  font-size: 23px;
   line-height: 1.6;
   color: var(--primary-color);
+  text-align: justify;
+  border: 60px solid white;
 }
 
 /* Services Section */
+
 .services {
   text-align: center;
   background-color: var(--background-light);
@@ -228,30 +242,41 @@ a {
   align-items: center;
   gap: 0;
   flex-wrap: wrap;
+  max-height: 100vh;
+  
 }
+
 
 .services img {
   flex: 0 0 50%;
   max-width: 50%;
   width: 100%;
   transition: filter 0.3s ease;
+  max-height: 90vh;
 }
 
 .services-content {
   flex: 0 0 50%;
+  display: grid; 
+  place-items: center;
   text-align: center;
   font-family: var(--font-heading);
-  padding-right: 20px;
+  padding: 20px;
 }
+
 
 .services-content h2 {
-  font-size: 32px;
+  font-size: 50px;
   color: var(--primary-color);
   margin-bottom: 20px;
-}
+  text-shadow: 1px 1px 6px rgba(0, 0, 0, 0.7);
 
+}
+.services-content-list {
+  border: 80px solid #f5f5f5;
+}
 .services-content p {
-  font-size: 18px;
+  font-size: 23px;
   line-height: 1.6;
   color: var(--primary-color);
 }
@@ -260,11 +285,12 @@ a {
   list-style: inside disc;
   margin: 15px 0;
   padding-left: 20px;
+  
 }
 
 .services-content ul li {
   margin-bottom: 8px;
-  font-size: 16px;
+  font-size: 20px;
   color: var(--primary-color);
 }
 
@@ -275,7 +301,7 @@ a {
   padding: 10px 25px;
   font-size: 16px;
   cursor: pointer;
-  border-radius: 25px;
+  border-radius: 5px;
   font-weight: 600;
   transition: background-color 0.3s ease, transform 0.3s ease;
 }
@@ -287,16 +313,18 @@ a {
 
 /* Features Section */
 .features {
-  padding: 20px 20px;
   background-color: var(--primary-color);
   text-align: center;
+  padding-bottom: 20px;
 }
 
 .features h2 {
   font-family: var(--font-heading);
   font-size: 32px;
   color: var(--text-light);
-  margin-bottom: 15px;
+  margin-top: 15px;
+  margin-bottom: 0px;
+  text-shadow: 1px 1px 6px rgba(0, 0, 0, 0.7);
 }
 
 .features-grid {
@@ -304,7 +332,6 @@ a {
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  font-size: 16px;
   gap: 15px;
   flex-wrap: wrap;
 }
@@ -318,13 +345,16 @@ a {
 }
 
 .feature-icon {
-  font-size: 24px;
+  font-size: 34px;
+  text-shadow: 1px 1px 6px rgba(0, 0, 0, 0.7);
 }
 
 .feature-text {
   color: var(--text-light);
   font-weight: 600;
-  font-size: 16px;
+  font-size: 20px;
+  font-family: var(--font-heading);
+  text-shadow: 1px 1px 6px rgba(0, 0, 0, 0.7);
 }
 
 /* Location Section */
@@ -336,9 +366,11 @@ a {
 
 .location h2 {
   font-family: var(--font-heading);
-  font-size: 32px;
+  font-size: 50px;
   color: var(--primary-color);
   margin-bottom: 20px;
+  text-shadow: 1px 1px 6px rgba(0, 0, 0, 0.7);
+
 }
 
 .map-wrapper {
