--- a/frontend/src/styles/LandingPage.css
+++ b/frontend/src/styles/LandingPage.css
@@ -56,7 +56,7 @@ a {
   align-items: center;
   width: 90%;
   max-width: 1200px;
-  justify-content: center;
+  /* justify-content: center; */
 }
 
 .navbar-links {
