--- a/frontend/src/styles/LandingPage.css
+++ b/frontend/src/styles/LandingPage.css
@@ -355,17 +355,17 @@ a {
 
 /* Features Section */
 .features {
-  background-color: var(--primary-color);
+  background-color: var(--primary2-color);
   text-align: center;
   padding-bottom: 20px;
 }
 
 .features h2 {
   font-family: var(--font-heading);
-  font-size: 32px;
-  color: var(--text-light);
+  color: var(--primary-color);
+  font-size: 48px;
   margin-top: 15px;
-  margin-bottom: 0px;
+  margin-bottom: 20px;
   text-shadow: 1px 1px 6px rgba(0, 0, 0, 0.7);
 }
 
@@ -392,9 +392,9 @@ a {
 }
 
 .feature-text {
-  color: var(--text-light);
+  color: var(--primary-color);
   font-weight: 600;
-  font-size: 20px;
+  font-size: 30px;
   font-family: var(--font-body);
   text-shadow: 1px 1px 6px rgba(0, 0, 0, 0.7);
   padding-top: 10px;
